# EditorVScode_2

./: CMakeLists.txt  main.cpp
src/: _coloredtable.cpp  _table.cpp  _table.h  area.cpp  area.h  colors.h  const.h  editor.cpp  editor.h  filedata.cpp  filedata.h  flags.h  init.h  loads.cpp  loads.h  maincross.cpp  maincross.h  pixel.cpp  pixel.h  pixeldata.h  rect.cpp  rect.h  sdltype.cpp  sdltype.h
